test/corpus/1_statements.txt
===================
Variable Definition
===================
ScriptName DefTest

bool x
int y
MyScript[] foo
whatever bar

---
(source_file
    (header
        (identifier))
    (variableDefinition
        (type)
        (identifier))
    (variableDefinition
        (type)
        (identifier))
    (variableDefinition
        (type
            (identifier))
        (identifier))
    (variableDefinition
        (type
            (identifier))
        (identifier)))



==================================
Variable Definition And Assignment
==================================
scriptname deftest

bool x = true
float y = 1.1
int n = 200
SomeScriptType foo
string MyString = "a string literal"
int bar = 0xa000800

---
(source_file
    (header
        (identifier))
    (variableDefinition
        (type)
        (identifier)
        (pureAssignment)
        (bool))
    (variableDefinition
        (type)
        (identifier)
        (pureAssignment)
        (float))
    (variableDefinition
        (type)
        (identifier)
        (pureAssignment)
        (int))
    (variableDefinition
        (type
            (identifier))
        (identifier))
    (variableDefinition
        (type)
        (identifier)
        (pureAssignment)
        (string))
    (variableDefinition
        (type)
        (identifier)
        (pureAssignment)
        (int)))



=============
Script Import
=============
ScriptName MyScript

import SomeOtherScript

---
(source_file
    (header
        (identifier))
    (import
    (identifier)))



=================
Multi-line Import
=================
ScriptName MyScript

import \
SomeOtherScript

---
(source_file
    (header
        (identifier))
    (import
        (identifier)))



==============
Invalid Import
:error
==============
ScriptName MyScript

import SomeOtherScript\
Trailing

---
