test/corpus/2_expressions.txt
==============
Dot Expression
==============
scriptname dot

y.test()

int x = y.test(None, "param1", param2 = x)

int n = x.length

int x = y.test(param0 = 5)

---
(source_file
    (header
        (identifier))
    (functionCall
        (dotExpression
          (identifier)
          (callExpression
            (identifier))))
    (variableDefinition
        (type)
        (identifier)
        (dotExpression
            (identifier)
            (callExpression
                (identifier)
                (parameter
                    (none))
                (parameter
                    (string))
                (parameter
                    (identifier)
                    (identifier)))))
    (variableDefinition
        (type)
        (identifier)
        (dotExpression
            (identifier)
            (identifier)))
    (variableDefinition
        (type)
        (identifier)
        (dotExpression
            (identifier)
            (callExpression
                (identifier)
                (parameter
                    (identifier)
                    (int))))))
================
Unary Expression
================
scriptname unary

int x = !y
float foo = - bar

---
(source_file
    (header
        (identifier))
    (variableDefinition
        (type)
        (identifier)
        (unaryExpression
            (identifier)))
    (variableDefinition
        (type)
        (identifier)
        (unaryExpression
            (identifier))))



=================
Binary Expression
=================
scriptname binExpr

int x = 1 - 4 * 1.0 + 5

bool y = "string" != "compare"

---
(source_file
    (header
        (identifier))
    (variableDefinition
        (type)
        (identifier)
        (binaryExpression
            (int)
            (binaryExpression
                (binaryExpression
                    (int)
                    (float))
                (int))))
    (variableDefinition
        (type)
        (identifier)
        (binaryExpression
            (string)
            (string))))



===========
Parenthesis
===========
scriptname paren

int x = (y)
int foo = (-bar + 2) + 2
int MyVar = -(Call() + 2)

---
(source_file
    (header
        (identifier))
    (variableDefinition
        (type)
        (identifier)
        (parenthesis
            (identifier)))
    (variableDefinition
        (type)
        (identifier)
        (binaryExpression
            (parenthesis
                (binaryExpression
                    (unaryExpression
                        (identifier))
                    (int)))
                (int)))
    (variableDefinition
        (type)
        (identifier)
        (unaryExpression
            (parenthesis
                (binaryExpression
                    (callExpression
                        (identifier))
                (int))))))



======================
Mismatched Parenthesis
:error
======================
scriptname errors

int x = (( 10 + 10 )

---



===============
Cast Expression
===============
scriptname cast

bool x = 1 as bool

---
(source_file
    (header
        (identifier))
    (variableDefinition
        (type)
        (identifier)
        (castExpression
            (int)
            (type))))




=================
Array Expressions
=================
scriptname array

int[] x = new int[20]

; won't compile, but allowed by grammar
int[] x = new int[][20]

int x = arr[5 + 5]

---
(source_file
    (header
        (identifier))
    (variableDefinition
        (type)
        (identifier)
        (arrayCreationExpression
            (type)
            (int)))
    (comment)
    (variableDefinition
        (type)
        (identifier)
        (arrayCreationExpression
            (type)
            (int)))
    (variableDefinition
        (type)
        (identifier)
        (arrayExpression
            (identifier)
            (binaryExpression
            (int)
            (int)))))
