test/corpus/3_functions.txt
==============
Function Calls
==============
scriptname funcCall

int x = Call()
float y = Call(20)
Call("test")

---
(source_file
    (header
        (identifier))
    (variableDefinition
        (type)
        (identifier)
        (callExpression
            (identifier)))
    (variableDefinition
        (type)
        (identifier)
        (callExpression
            (identifier)
            (parameter
                (int))))
    (functionCall
        (callExpression
            (identifier)
            (parameter
                (string)))))



===================
Function Definition
===================
scriptname func

Function test(Weapon MyWeapon)
    return 0
EndFunction

Function test(Weapon MyWeapon = true) global
    return 0
EndFunction

---
(source_file
    (header
        (identifier))
    (function
        (identifier)
        (parameterDefinition
            (type
            (identifier))
        (identifier))
        (return
          (int)))
    (function
        (identifier)
        (parameterDefinition
            (type
                (identifier))
        (identifier)
        (bool))
        (global)
        (return
          (int))))



================
Native Functions
================
scriptname native

int function aa() native

int function aa(test aaaa, bool meow = true) native

---
(source_file
      (header
        (identifier))
      (nativeFunction
        (type)
        (identifier)
        (native))
      (nativeFunction
        (type)
        (identifier)
        (parameterDefinition
          (type
            (identifier))
          (identifier))
        (parameterDefinition
          (type)
          (identifier)
          (bool))
        (native)))
