test/corpus/4_events.txt
===============
Event Statement
===============
scriptname event

Event MyEvent(bool param1, int param2)
    return param2
EndEvent

---
(source_file
    (header
        (identifier))
    (event
        (identifier)
        (parameterDefinition
            (type)
            (identifier))
        (parameterDefinition
            (type)
            (identifier))
        (return
            (identifier))))



============
Native Event
============
scriptname event

Event MyEvent(bool param1, int param2) native

---
(source_file
    (header
        (identifier))
    (nativeEvent
        (identifier)
        (parameterDefinition
            (type)
            (identifier))
        (parameterDefinition
            (type)
            (identifier))
        (native)))



===============
Event Docstring
===============
scriptname docevent

Event MyEvent() native
{teststr}

Event MyEvent()
{teststr}
    return 0
endevent

---
(source_file
    (header
        (identifier))
    (nativeEvent
        (identifier)
        (native)
        (docString))
    (event
        (identifier)
        (docString)
        (return
            (int))))
