test/corpus/5_properties.txt
=============
Property Auto
=============
scriptname prop

Int Property myInt Auto

---
(source_file
    (header
        (identifier))
    (property
        (type)
        (identifier)
        (auto)))



=====================
Property AutoReadOnly
=====================
scriptname prop

Int Property myInt = 5 AutoReadOnly Conditional Hidden

---
(source_file
    (header
        (identifier))
    (property
        (type)
        (identifier)
        (int)
        (autoReadOnly)
        (conditional)
        (hidden)))



=============
Property Full
=============
scriptname prop

Int Property myInt Hidden
    function get()
        return 5
    endfunction
    function set()
        return 5
    endfunction
EndProperty

---
(source_file
    (header
        (identifier))
    (propertyFull
        (type)
        (identifier)
        (hidden)
        (function
            (identifier)
            (return
                (int)))
        (function
            (identifier)
            (return
                (int)))))
